--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Launch">
+
+        android:theme="@style/AppTheme.Light.Launch">
         <activity
             android:name=".MainActivity"
             android:exported="true">
