--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
 
         android:theme="@style/AppTheme.Light.Launch">
