--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.genshin">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="com.example.GenshinApp"
@@ -11,8 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
-
-        android:theme="@style/AppTheme.Light.Launch">
+        android:theme="@style/Launch">
+        <activity
+            android:name=".CharacterActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
