--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
-        android:theme="@style/Launch">
+        android:theme="@style/AppTheme.Launch">
         <activity
             android:name=".CharacterActivity"
             android:exported="false" />
