--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,44 +1,49 @@
 plugins {
-    id 'com.android.application'
+	id 'com.android.application'
 }
 
 android {
-    compileSdk 31
+	compileSdk 31
 
-    defaultConfig {
-        applicationId "com.example.genshin"
-        minSdk 25
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+	defaultConfig {
+		applicationId "com.example.genshin"
+		minSdk 25
+		targetSdk 31
+		versionCode 1
+		versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
+		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+	}
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+		}
+	}
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
+    dependenciesInfo {
+        includeInApk false
+        includeInBundle false
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+    buildToolsVersion '31.0.0'
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.4'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.4'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+	implementation 'androidx.appcompat:appcompat:1.4.1'
+	implementation 'com.google.android.material:material:1.5.0'
+	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+	implementation 'com.squareup.picasso:picasso:2.71828'
+	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+	implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.4'
+	implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.4'
+	implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.4'
+	testImplementation 'junit:junit:4.13.2'
+	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
