--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,11 @@
 		android:theme="@style/AppTheme.Launch">
 		<activity
 			android:name=".CharacterActivity"
+			android:screenOrientation="portrait"
 			android:exported="false" />
 		<activity
 				android:name=".MainActivity"
+			android:screenOrientation="portrait"
 				android:exported="true">
 				<intent-filter>
 					<action android:name="android.intent.action.MAIN" />
