--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
 
 dependencies {
 
+	implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
 	implementation 'androidx.appcompat:appcompat:1.4.1'
 	implementation 'com.google.android.material:material:1.5.0'
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
