--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,16 +33,14 @@ android {
 }
 
 dependencies {
-
+	implementation "androidx.room:room-runtime:2.4.2"
 	implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-
 	implementation 'androidx.appcompat:appcompat:1.4.1'
 	implementation 'com.google.android.material:material:1.5.0'
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	implementation 'com.squareup.picasso:picasso:2.71828'
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-	implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.4'
 	implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.4'
 	implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.4'
 	testImplementation 'junit:junit:4.13.2'
