--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 	}
+
 	compileOptions {
 		sourceCompatibility JavaVersion.VERSION_1_8
 		targetCompatibility JavaVersion.VERSION_1_8
@@ -33,12 +34,15 @@ android {
 }
 
 dependencies {
+	implementation "com.github.bumptech.glide:recyclerview-integration:4.11.0"
+
 	implementation "androidx.room:room-runtime:2.4.2"
+	annotationProcessor "androidx.room:room-compiler:2.4.2"
 	implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 	implementation 'androidx.appcompat:appcompat:1.4.1'
 	implementation 'com.google.android.material:material:1.5.0'
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-	implementation 'com.squareup.picasso:picasso:2.71828'
+	implementation 'com.squareup.picasso:picasso:2.5.2'
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.4'
@@ -47,3 +51,4 @@ dependencies {
 	androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
