--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 		android:label="@string/app_name"
 		android:roundIcon="@drawable/logo"
 		android:supportsRtl="true"
+		android:usesCleartextTraffic="true"
 		android:theme="@style/AppTheme.Launch">
 		<activity
 			android:name=".CharacterActivity"
