--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.josty.genshin">
 
     <application
+        android:name=".GenshinApp"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
