added networkModule, databaseModule, db and request for dictionary

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
-    compileSdk 31
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.josty.genshin"
@@ -35,6 +37,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.okio:okio:3.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
@@ -49,7 +56,11 @@ dependencies {
 
     implementation "io.insert-koin:koin-core:3.2.0"
     implementation 'io.insert-koin:koin-android:3.2.0'
+
+    annotationProcessor "androidx.room:room-compiler:2.4.2"
     implementation 'androidx.room:room-common:2.4.2'
+    implementation 'androidx.room:room-ktx:2.4.2'
+    kapt "androidx.room:room-compiler:2.4.2"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.insert-koin:koin-test:3.2.0"
