--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.josty.genshin">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".GenshinApp"
         android:allowBackup="true"
