--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Launch"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".main.MainActivity"
