--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'newrelic'
 }
 
 apply plugin: 'kotlin-kapt'
@@ -37,6 +38,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.newrelic.agent.android:android-agent:6.6.0'
+
     implementation 'com.squareup.okio:okio:3.1.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
@@ -68,4 +71,5 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
