--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.newrelic.agent.android:agent-gradle-plugin:6.6.0'
+    }
+}
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
